# genai_nifi

./: README.md  hatch_build.py  pyproject.toml
.github/workflows/: main.yml  release.yaml
