[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "genai-nifi"
dynamic = ["version"]
description = 'VastDB NiFi Processors.'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Chris Snow", email = "chris.snow@vastdata.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  # Shared requirements
  "openai==1.9.0",
  "tiktoken",
  "langchain==0.1.11",
  
  # Chroma requirements
  "chromadb==0.4.22",
  "numpy==1.26.4",
  "onnxruntime",
  "tokenizers",
  "tqdm",
  "requests",
  
  # Pinecone requirements
  "pinecone-client==3.0.1",
  "tiktoken",
  "langchain==0.1.11",
  
  # OpenSearch requirements
  "opensearch-py==2.5.0",
  
  # Qdrant requirements
  "qdrant-client==1.9.1"
]

[project.urls]
Documentation = "https://github.com/snowch/genai_nifi#readme"
Issues = "https://github.com/snowch/genai_nifi/issues"
Source = "https://github.com/snowch/genai_nifi"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/genai_nifi tests}"

[tool.coverage.run]
source_pkgs = ["src/genai_nifi", "tests"]
branch = true
parallel = true
omit = [
  "src/genai_nifi/__about__.py",
]

[tool.coverage.paths]
genai_nifi = ["src/genai_nifi", "*/genai-nifi/src/genai_nifi"]
tests = ["tests", "tests/genai_nifi/"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.custom]
exclude = [
  "hatch_build.py",
  ".gitignore",
  ".github/",
  "src/genai_nifi/processors/__init__.py"
]

[tool.hatch.build.targets.custom.force-include]
"src/genai_nifi/processors/" = "/"


[tool.ruff]
preview = true
lint.pep8-naming.extend-ignore-names = [
    "flowFile",
    "getPropertyDescriptors",
    "onScheduled",
]
lint.flake8-self.extend-ignore-names = [
    "_standard_validators"
]
lint.extend-select = [
    "CPY001"
]
lint.ignore = [
    "G004", # Allow f-string for logging
    "N999", # Allow Processor module names that do not follow pep8-naming
    "PERF401", # Allow manual list comprehension
    "RUF012", # Allow mutable class attributes without typing.ClassVar
    "S105", # Avoid checking for hardcoded-password-string values
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "# SPDX-License-Identifier: MIT\n"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/genai_nifi/processors/_version.py"
